--- a/talleres.html
+++ b/talleres.html
@@ -253,13 +253,14 @@
             </span></div>
           </li>
           <li>
-            <div class="collapsible-header"><i class="fas fa-pencil-ruler"></i>Diseño Arquitectónico </div>
+            <div class="collapsible-header"><i class="fas fa-pencil-ruler"></i>Análisis urbano </div>
             <div class="collapsible-body"><span>
               <p>Hora: 11:00 a 13:00</p>
               <p>Empresa: LGZ Arquitectura</p>
               <p>Instructor: Lena de la Torre y Oscar Fdo. Mendoza Lozano</p>
+              <p>Descripción: Estrategias de análisis urbano mediante ejercicios prácticos de observación, registro y toma de evidencia que promueven la participación y la interacción con la ciudad.</p>
               <p>Capacidad: 25 participantes</p>
-              <strong>Foto de proyectos: Por favor descarguen de nuestra página www.lgz.com.mx</strong>
+              <strong>Nota: El taller comienza en la sala asignada, y posteriormente se realizan ejercicios prácticos en el Campus. Los asistentes deben llevar una libreta y lápiz.</strong>
             </span></div>
           </li>
           <li>
