--- a/visitas.html
+++ b/visitas.html
@@ -85,7 +85,7 @@
                 <p>Descripción: Recorrido dentro de la construcción de esta torre con departamentos y locales comerciales.
                   </p>
                 <p>Capacidad: 14 personas</p>
-                <p>Salida de autobús: 15:45 horas</p>
+                <p>Salida de autobús: 15:45 horas, los participantes se van caminando acompañados de un guia</p>
                 <strong>Requisitos de seguridad: Chaleco, casco, zapatos cerrados idealmente de suela dura y copia de seguro.</strong>
                 <div class="google-maps">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14385.848146591155!2d-100.2948299!3d25.6559743!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x162d13bb9d171e82!2sTorre%20Shiro%20-%20%C3%9Altima%20fase%20de%20preventa%20Comercio%20y%20Restaurantes!5e0!3m2!1ses-419!2smx!4v1572901084615!5m2!1ses-419!2smx" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
@@ -401,7 +401,7 @@
                     <p>Empresa: PPI-IDEAS</p>
                     <p>Descripción: Recorrido dentro de la construcción de esta torre con departamentos y locales comerciales.</p>
                     <p>Capacidad: 14 personas</p>
-                    <p>Salida de autobús: 14:45 horas</p>
+                    <p>Salida: 14:45 horas, los participantes se van caminando acompañados de un guia</p>
                     <strong>Requisitos de seguridad: Chaleco, casco, zapatos cerrados idealmente de suela dura y copia de seguro.</strong>
                     <div class="google-maps">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14385.848146591155!2d-100.2948299!3d25.6559743!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x162d13bb9d171e82!2sTorre%20Shiro%20-%20%C3%9Altima%20fase%20de%20preventa%20Comercio%20y%20Restaurantes!5e0!3m2!1ses-419!2smx!4v1572913739134!5m2!1ses-419!2smx" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
@@ -426,7 +426,7 @@
                     <p>Empresa: Proyectos Planeación Ideas SA de CV</p>          
                     <p>Descripción de la visita: Explicación de la construcción de la torre.</p>
                     <p>Capacidad: 19 personas</p>
-                    <p>Salida de autobús: 15:45 horas</p>
+                    <p>Salida de autobús: 15:45 horas, los participantes se van caminando acompañados de un guia</p>
                     <strong>Nota: llevar chaleco, casco, zapato cerrado y llevar una copia de su seguro por cuestión de seguridad.
                       </strong>
                       <div class="google-maps">
