--- a/visitas.html
+++ b/visitas.html
@@ -121,31 +121,17 @@
                 </span></div>
               </li>
               <li>
-                  <div class="collapsible-header"><i class="material-icons">directions_bus</i>Arboleda Comercial fase 2</div>
+                  <div class="collapsible-header"><i class="material-icons">directions_bus</i>Oficinas capital natural</div>
                   <div class="collapsible-body"><span>
                     <p>Empresa: Capital Natural</p>
-                    <p>Descripción: Arboleda Comercial Fase 2 es un desarrollo de usos mixtos de 45,746 m2 de construc los cuales están compuestos de:
-                    </p>
-                    <ul>
-                      <li>7,800 m2 de comercio</li>
-                      <li>16,420 m2 de departamentos en renta</li>
-                      <li>4 niveles de sótano</li>
-                    </ul>
+                    <p>Descripción: Capital Natural es una empresa líder en gestión de fondos y proyectos de inversión, con un enfoque estratégico en el sector inmobiliario. y desarrollo de infraestructura. 
+                      En su momento, la oficina de Capital Natural consiguió la puntuación más alta en LEED Platinum para interiores, fue la tercera en México y la primera en Monterrey en conseguir esta certificación.</p>
                     <p>Capacidad: 14 personas</p>
                     <p>Salida de autobús: 15:15 horas</p>
-                    <strong>Atuendo:
-                      <ul>
-                        <li>Botas con casquillo</li>
-                        <li>Casco</li>
-                        <li>Chaleco</li>
-                        <li>Jeans</li>
-                        <li>Camisa de manga larga</li>
-                        <li>Guantes de seguridad</li>
-                        <li>Lentes de seguridad</li>
-                      </ul>
+                    <strong>Atuendo: Casual
                     </strong>
                     <div class="google-maps">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14386.795475767212!2d-100.355966!3d25.648118!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x753e47d8c314f324!2sArboleda!5e0!3m2!1ses-419!2smx!4v1573227008704!5m2!1ses-419!2smx" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14386.815477421893!2d-100.3535874!3d25.6479521!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xce7b8633dbf46dd5!2sSofia!5e0!3m2!1ses-419!2smx!4v1573533529478!5m2!1ses-419!2smx" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                     </div>
                   </span></div>
                 </li>
