--- a/visitas.html
+++ b/visitas.html
@@ -194,8 +194,8 @@
                 <div class="collapsible-body"><span>
                   <p>Empresa: Organimuebles S.A. de C.V.</p>
                   <p>Visita guiada por el Arq. Horacio Treviño EXATEC 95 de desarrollo de espacios corporativos a través del diseño, fabricación e implementación de proyectos.</p>
-                  <p>Capacidad: 30 personas
-                    </p>
+                  <p>Capacidad: 30 personas</p>
+                  <p>Salida de autobús: 10:45 horas</p>
                   <strong>Nota: Vestimenta casual</strong>
                   <div class="google-maps">
                       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7195.148042306332!2d-100.28272539999999!3d25.619067599999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8662bf0d5681631d%3A0xf4dff0d1c0f11202!2sOrganimuebles!5e0!3m2!1ses-419!2smx!4v1572903817929!5m2!1ses-419!2smx" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
